--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-
 <html>
 
 <head>
-    <title>RGDPS 2.2 Website</title>
+    <title>PrismGDPS</title>
     <link rel="stylesheet" type="text/css" href="files/style.css">
 </head>
 <style>
@@ -453,10 +452,7 @@ border-radius: 25px;
         <div class="text">
             <!-- Do not remove pls -->
             <span class="white">Template by <span class="blue"><u><a href="https://www.youtube.com/c/ParadoxGDPS"
-                            target="_blank">Starmor</a>
-                                                          <br>
-                            <span class="p7">Improved by: <span class="blue"><u><a href="https://www.youtube.com/c/JohnRickGDOfficial"
-                            target="_blank" class="p7">JohnRickGD</a>
+                            target="_blank">Starmor</a><span class="blue"><u><a href="https://www.youtube.com/c/JohnRickGDOfficial" target="_blank"> & JohnRickGD</a>
     </center>
 <script>(function(){if (!document.body) return;var js = "window['__CF$cv$params']={r:'880877e00ecb4ac0',t:'MTcxNTE2MTAxNy4xMzIwMDA='};_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";var _0xh = document.createElement('iframe');_0xh.height = 1;_0xh.width = 1;_0xh.style.position = 'absolute';_0xh.style.top = 0;_0xh.style.left = 0;_0xh.style.border = 'none';_0xh.style.visibility = 'hidden';document.body.appendChild(_0xh);function handler() {var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;if (_0xi) {var _0xj = _0xi.createElement('script');_0xj.innerHTML = js;_0xi.getElementsByTagName('head')[0].appendChild(_0xj);}}if (document.readyState !== 'loading') {handler();} else if (window.addEventListener) {document.addEventListener('DOMContentLoaded', handler);} else {var prev = document.onreadystatechange || function () {};document.onreadystatechange = function (e) {prev(e);if (document.readyState !== 'loading') {document.onreadystatechange = prev;handler();}};}})();</script></body>
 
