--- a/index.html
+++ b/index.html
@@ -387,10 +387,7 @@ border-radius: 25px;
             <br>
             <br>
             <!-- Upper buttons -->
-            <a href="https://johnrickgdp.ps.fhgdps.com/windows.html"><img src="files/windows.png" width="200" hspace="12" class="zoom"></a>
-            <a href="https://johnrickgdp.ps.fhgdps.com/android.html"><img src="files/android.png" width="200" hspace="12" class="zoom"></a>
-            <a href="https://www.mediafire.com/file/65h1mhnirk7ygwz/RGDPS.ipa/file"target="_blank"><img src="files/iosicon.png" width="200" hspace="12" class="zoom"></a>
-             <a href="geode.html"><img src="files/geode2.png" width="200" hspace="12" class="zoom"></a>
+            <a href="/download"><img src="files/download.png" width="200" hspace="12" class="zoom"></a>
             <!-- Add buttons below -->
         </div>
 
@@ -399,7 +396,7 @@ border-radius: 25px;
         <div>
             <!-- Lower buttons -->
             <a href="https://johnrickgdp.ps.fhgdps.com/dashboard/"target="_blank"><img src="files/tools.png" width="200" hspace="12" class="zoom"></a>
-            <a href="demonlist/"><img src="files/demonlist.png" width="200" hspace="12" class="zoom"></a>
+            <a href="https://prismgd.ps.fhgdps.com/dashboard/demonlist"><img src="files/demonlist.png" width="200" hspace="12" class="zoom"></a>
             <a href="https://gdpshub.com/gdps/1327" target="_blank"><img src="files/gdpshub.png" width="200"
                     hspace="12" class="zoom"></a>
             <a href="https://johnrickgdp.ps.fhgdps.com/tools/stats/stats.php" target="_blank"><img src="files/stats.png" width="200" class="zoom"
