--- a/geode/index.html
+++ b/geode/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>PrismGDPS // Downloads</title>
+    <title>PrismGDPS // Geode Downloads</title>
     <link rel="stylesheet" type="text/css" href="/index.css">
 </head>
     <center>
@@ -19,18 +19,12 @@
             <br>
             <br>
             <!-- Upper buttons -->
-            <a href="androiddownloadhere" target="_self"><img src="/files/download-android.png" width="200" hspace="12" class="zoom"></a>
-            <a href="pcdownloadhere" target="_self"><img src="/files/download-pc.png" width="200" hspace="12" class="zoom"></a>
+            <a href="geodeandroid" target="_self"><img src="/files/download-android.png" width="200" hspace="12" class="zoom"></a>
+            <a href="geodewindows" target="_self"><img src="/files/download-pc.png" width="200" hspace="12" class="zoom"></a>
             <!-- Add buttons below -->
         </div>
 
         <br>
-
-        <div>
-            <!-- Lower buttons -->
-            <a href="/geode" target="_self"><img src="/files/download-geode.png" width="200" hspace="12" class="zoom"></a>
-            <!-- Add buttons below -->
-        </div>
 
         <div class="text">
             <!-- Do not remove pls -->
