--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>PrismGDPS</title>
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
+   <body style="background: linear-gradient(#d302ff, #4d31ff);">
     <center>
     <div class="slider-thumb"></div>
     <div class="slider-thumb2"></div>
