--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
  
         .Names {
             font-family: pusab;
-            color: #a5ff55;
+            color: #6725F8;
             text-shadow: 0px 0px 6px black;
             -webkit-text-stroke: 1px black;
             font-size: 25px;
@@ -119,11 +119,11 @@
  
 <body>
     <center>
-        <img src="files/logo.png" style="width: 15%; height: auto;" class=""></a>
+        <img src="files/prismCenteredHeader.png" style="width: 15%; height: auto;" class=""></a>
  
-        <body> aaaa wip this is supposed to be prism website
+        <body>
             <div class="dashboard-container gdbox-brown songs">
-                <h2 class="Names">Upload Song using MP3</h2>
+                <h2 class="Names">PrismGDPS</h2>
                 <h2 class="desc">Server: 1 </h2>
                 <h2 class="desc">Upload only .m4a, and .mp3</h2>
                 <form id="uploadForm" action="upload.php" method="post" enctype="multipart/form-data">
