--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         .songscontent {
             border: 3px solid transparent;
         }
+
+        .prismHeader {
+            max-width: 90%;
+            height: auto;
+        }
  
         .dashboard-container.gdbox-brown.songs {
             margin-top: 1%;
@@ -119,13 +124,14 @@
  
 <body>
     <center>
-        <img src="files/prismCenteredHeader.png" style="width: 15%; height: auto;" class=""></a>
+        <img src="files/prismCenteredHeader.png" class="prismHeader"></a>
  
         <body>
             <div class="dashboard-container gdbox-brown songs">
                 <h2 class="Names">PrismGDPS</h2>
-                <h2 class="desc">Server: 1 </h2>
-                <h2 class="desc">Upload only .m4a, and .mp3</h2>
+                <h2 class="desc">lorem ipsum dor isit amet </h2>
+                <h2 class="desc">notes:</h2>
+                <h3 class="desc">put the buttons as links n syuff<br>make actual directories to the paths<br>n make the css in html go to css file cuz yea
                 <form id="uploadForm" action="upload.php" method="post" enctype="multipart/form-data">
                     <label class="desc3" for="mp3_file">Select MP3 File:</label><br>
                     <input class="gdInput text" type="file" name="mp3_file" id="mp3_file" required><br><br>
@@ -137,14 +143,5 @@
         </center>
     </div>
     </div>
- 
-    <script>
-        function upload() {
-            var loading = document.querySelector('.loading');
-            var message = document.querySelector('.message');
-            loading.style.display = 'block';
-            message.style.display = 'block';
-        }
-    </script>
 </body>
     </html>
