--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         .prismHeader {
             max-width: 90%;
             height: auto;
+            box-shadow: 0px 0px 6px black;
         }
  
         .dashboard-container.gdbox-brown.songs {
