--- a/index.html
+++ b/index.html
@@ -127,14 +127,9 @@
                 <h2 class="desc">lorem ipsum dor isit amet </h2>
                 <h2 class="desc">notes:</h2>
                 <h3 class="desc">put the buttons as links n syuff<br>make actual directories to the paths<br>n make the css in html go to css file cuz yea
-                <form id="uploadForm" action="upload.php" method="post" enctype="multipart/form-data">
-                    <label class="desc3" for="mp3_file">Select MP3 File:</label><br>
-                    <input class="gdInput text" type="file" name="mp3_file" id="mp3_file" required><br><br>
-                    <div class="loading"></div><br>
-                    <div class="message" style="display: none;">Please wait we are Processing your song</div>
-                    <input class="btnfix" type="submit" class="button" value="Upload" onclick="upload()">
-                </form>
-                <label class="desc">RGDPS 2.2 Website by JohnRickGD</label>
+                <a href="/download" target="_self">
+                 <img src="/files/download.png" alt="Download">
+                </a>
         </center>
     </div>
     </div>
