--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 transform: rotate(360deg);
             }
         }
-        .message{
+        .message {
             font-family: pusab;
             color: white;
             text-shadow: 0px 0px 6px black;
@@ -123,12 +123,8 @@
  
         <body>
             <div class="dashboard-container gdbox-brown songs">
-                <h2 class="Names">PrismGDPS</h2>
-                <h2 class="desc">lorem ipsum dor isit amet </h2>
-                <h2 class="desc">notes:</h2>
-                <h3 class="desc">put the buttons as links n syuff<br>make actual directories to the paths<br>n make the css in html go to css file cuz yea
-                <a href="/download" target="_self">
-                 <img src="/files/download.png" alt="Download">
+         <a href="/download" target="_self">                
+            <img src="/files/download.png" alt="Download" width="128" height="128">
                 </a>
         </center>
     </div>
