--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
  
         <body>
             <div class="dashboard-container gdbox-brown songs">
-         <a href="/download" target="_self">                
-            <img src="/files/download.png" alt="Download" width="128" height="128">
-                </a>
+            <a href="/download" target="_self">                
+              <img src="/files/download.png" alt="Download" width="200">
+            </a>
         </center>
     </div>
     </div>
