--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="files/prismCenteredHeader.png" class="prismHeader"></a>
  
         <body>
-            <div class="dashboard-container gdbox-brown songs">
+            <div class="dashboard-container gdbox-brown songs style="flex-direction: row;">
             <a href="/download" target="_self">                
               <img src="/files/download.png" alt="Download" width="200">
             </a>
