--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PrismGDPS</title>
+    <title>Prism // Home</title>
     <link rel="stylesheet" href="//cdn.obeygdbot.xyz/css/dashboard.css?v=14">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/index.css"/>
