--- a/download/index.html
+++ b/download/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prism // Download</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="//cdn.obeygdbot.xyz/css/dashboard.css?v=14">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/index.css"/>
@@ -22,7 +23,7 @@
               <img src="/files/geode-android.png" alt="Download Geode for Android" width="125">
             <a href="insert download" target="_blank">
               <img src="/files/geode-windows.png" alt="Dowmload Geode for Windows" width="125">
-            </a>
+            </a> <!-- hello world! !-->
         </center>
     </div>
     </div>
