--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
         <body>
             <div class="dashboard-container gdbox-brown songs style="flex-direction: row;">
             <a href="/download" target="_self">                
-              <img src="/files/download.png" alt="Download" width="200">
+              <img src="/files/download.png" alt="Download" width="125">
+            <a href="yt" target="_self">
+                <img src="/files/youtube.png" alt="YouTube" width="125">
+            <a href="dc" target="_self">
+                <img src="/files/discord.png" alt="Discord Server" width="125">
+            <a href="//prismized.ncservers.xyz/dashboard" target="_self">
+                <img src="/files/dashboard.png" alt="GDPS Dashboard" width="125">
+            <a href="//prismized.ncservers.xyz/dashboard/songs" target="_self">
+                <img src="/files/songs.png" alt="Upload Songs" width="125">
             </a>
         </center>
     </div>
