--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="//prismized.ncservers.xyz/dashboard" target="_self">
                 <img src="/files/dashboard.png" alt="GDPS Dashboard" width="125">
             <a href="//prismized.ncservers.xyz/dashboard/songs" target="_self">
-                <img src="/files/songs.png" alt="Upload Songs" width="125">
+                <img src="/files/uploadsongs.png" alt="Upload Songs" width="125">
             </a>
         </center>
     </div>
