--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="//cdn.obeygdbot.xyz/css/dashboard.css?v=14">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/index.css"/>
+     <style>
+         footer {
+             display: inline-block;
+             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+     </style>
   </head>
 <body>
     <center>
@@ -17,10 +22,6 @@
             <div class="dashboard-container gdbox-brown songs style="flex-direction: row;">
             <a href="/download" target="_self">                
               <img src="/files/download.png" alt="Download" width="125">
-            <a href="yt" target="_self">
-                <img src="/files/youtube.png" alt="YouTube" width="125">
-            <a href="dc" target="_self">
-                <img src="/files/discord.png" alt="Discord Server" width="125">
             <a href="//prismized.ncservers.xyz/dashboard" target="_self">
                 <img src="/files/dashboard.png" alt="GDPS Dashboard" width="125">
             <a href="//prismized.ncservers.xyz/dashboard/songs" target="_self">
@@ -29,5 +30,13 @@
         </center>
     </div>
     </div>
+                <footer>
+            <a href="dc" target="_self">
+                <img src="/files/discord.png" alt="Discord Server" width="125">
+            <a href="//youtube.com/@PrismPS" target="_self">
+                <img src="/files/youtube.png" alt="YouTube" width="125">
+            <a href="gdpshub" target="_self">
+                <img src="/files/gdpshub.png" alt="GDPS Hub" width="125">
+                </footer>
 </body>
     </html>
