--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/index.css"/>
      <style>
+         body {
+             display: flex;
+             min-height: 100vh;
+             flex-direction: column;
+        }
+
+         main {
+             flex: 1;
+         }
+         
          footer {
              display: inline-block;
              margin-top: auto;
