--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
          
          footer {
              display: inline-block;
+             position: fixed;
+             bottom: 0;
+             left: 0;
              margin-top: auto;
              text-align: center;
              box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
