--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
          
          footer {
              display: inline-block;
+             transform: translateX(-50%);
              position: fixed;
              bottom: 0;
              left: 0;
