--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <img src="/files/dashboard.png" alt="GDPS Dashboard" width="125">
             <a href="//prismized.ncservers.xyz/dashboard/songs" target="_self">
                 <img src="/files/uploadsongs.png" alt="Upload Songs" width="125">
+            <a href="/geode" target="_self">
+                <img src="/files/geode.png" alt="Geode" width="125">
             </a>
         </center>
     </div>
