--- a/404.html
+++ b/404.html
@@ -1,2 +1,2 @@
 <img src="//cdn.colix.pages.dev/404.png" alt="404 not foudn"></a>
-wrong link lol - <a href="/">press this to go back</a>
+<br>wrong link lol - <a href="/">press this to go back</a>
