--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </head>
 <body>
     <center>
-        <img src="files/prismCenteredHeader.png" class="prismHeader"></a>
+          <a href="/" target="_self">
+        <img src="/files/prismCenteredHeader.png" class="prismHeader"></a>
  
         <body>
             <div class="dashboard-container gdbox-brown songs style="flex-direction: row;">
