--- a/download/index.html
+++ b/download/index.html
@@ -11,6 +11,7 @@
   </head>
 <body>
     <center>
+          <a href="/" target="_self">
         <img src="/files/prismCenteredHeader.png" class="prismHeader"></a>
  
         <body>
