--- a/download/index.html
+++ b/download/index.html
@@ -16,10 +16,10 @@
  
         <body>
             <div class="dashboard-container gdbox-brown songs style="flex-direction: row;">
-            <a href="insert download" target="_blank">                
+            <a href="https://github.com/YeahhColix/prismWebsite/releases/download/2.206/PrismGDPS.apk" target="_blank">                
               <img src="/files/download-android.png" alt="Download for Android" width="125">
                 </a>
-            <a href="insert download" target="_blank">
+            <a href="https://github.com/YeahhColix/prismWebsite/releases/download/2.206/PrismGDPS.zip" target="_blank">
               <img src="/files/download-pc.png" alt="Download for Windows" width="125">
                 </a>
         </center>
