--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 </a>
             <a href="/geode" target="_self">
               <img src="/files/geode.png" alt="Geode" width="125">
-               </a>
+                </a>
+            <a href="/browser" target="_self">
+               <img src="/files/magnify.png" width="125">
+                </a>
         </center>
     </div>
     </div>
