--- a/geode/index.html
+++ b/geode/index.html
@@ -1,1 +1,29 @@
-Not available yet.
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prism // Download</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="//cdn.obeygdbot.xyz/css/dashboard.css?v=14">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/index.css"/>
+  </head>
+<body>
+    <center>
+                  <a href="/" target="_self">
+        <img src="/vault/prismCenteredHeader.png" class="prismHeader"></a>
+ 
+        <body>
+            <div class="dashboard-container gdbox-brown songs style="flex-direction: row;">
+            <a href="https://github.com/YeahhColix/prismWebsite/releases/download/2.206/PrismGDPS.Geode.apk" target="_blank">                
+              <img src="/vault/download-android.png" alt="Download for Android" width="125">
+                </a>
+            <a href="https://github.com/geode-sdk/android-launcher/releases/download/1.4.1/geode-launcher-v1.4.1.apk" target="_blank">
+              <img src="/vault/download-pc.png" alt="Download for Windows" width="125">
+                </a>
+        </center>
+    </div>
+    </div>
+</body>
+      </html>
