--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
 <body>
     <center>
           <a href="/" target="_self">
-        <img src="/files/prismCenteredHeader.png" class="prismHeader"></a>
+        <img src="//prismgdps.pages.dev/files/prismCenteredHeader.png" class="prismHeader"></a>
  
         <body>
             <div class="dashboard-container gdbox-brown songs style="flex-direction: row;">
             <a href="/download" target="_self">                
-              <img src="/files/download.png" alt="Download" width="125">
+              <img src="/vault/download.png" alt="Download" width="125">
                 </a>
             <a href="//prismized.ncservers.xyz/dashboard" target="_self">
-              <img src="/files/dashboard.png" alt="GDPS Dashboard" width="125">
+              <img src="/vault/dashboard.png" alt="GDPS Dashboard" width="125">
                 </a>
             <a href="//prismized.ncservers.xyz/dashboard/songs" target="_self">
-              <img src="/files/uploadsongs.png" alt="Upload Songs" width="125">
+              <img src="/vault/uploadsongs.png" alt="Upload Songs" width="125">
                 </a>
             <a href="/geode" target="_self">
-              <img src="/files/geode.png" alt="Geode" width="125">
+              <img src="/vault/geode.png" alt="Geode" width="125">
                 </a>
             <a href="/browser" target="_self">
-               <img src="/files/magnify.png" width="125">
+               <img src="/vault/magnify.png" width="125">
                 </a>
         </center>
     </div>
     </div>
                 <footer>
             <a href="dc" target="_self">
-                <img src="/files/discord.png" alt="Discord Server" width="125">
+                <img src="/vault/discord.png" alt="Discord Server" width="125">
             <a href="//youtube.com/@PrismPS" target="_self">
-                <img src="/files/youtube.png" alt="YouTube" width="125">
+                <img src="/vault/youtube.png" alt="YouTube" width="125">
             <a href="gdpshub" target="_self">
-                <img src="/files/gdpshub.png" alt="GDPS Hub" width="125">
+                <img src="/vault/gdpshub.png" alt="GDPS Hub" width="125">
                 </footer>
 </body>
     </html>
