--- a/download/index.html
+++ b/download/index.html
@@ -12,15 +12,15 @@
 <body>
     <center>
           <a href="/" target="_self">
-        <img src="/files/prismCenteredHeader.png" class="prismHeader"></a>
+        <img src="/vault/prismCenteredHeader.png" class="prismHeader"></a>
  
         <body>
             <div class="dashboard-container gdbox-brown songs style="flex-direction: row;">
             <a href="https://github.com/YeahhColix/prismWebsite/releases/download/2.206/PrismGDPS.apk" target="_blank">                
-              <img src="/files/download-android.png" alt="Download for Android" width="125">
+              <img src="/vault/download-android.png" alt="Download for Android" width="125">
                 </a>
             <a href="https://github.com/YeahhColix/prismWebsite/releases/download/2.206/PrismGDPS.zip" target="_blank">
-              <img src="/files/download-pc.png" alt="Download for Windows" width="125">
+              <img src="/vault/download-pc.png" alt="Download for Windows" width="125">
                 </a>
         </center>
     </div>
