--- a/download/index.html
+++ b/download/index.html
@@ -22,6 +22,9 @@
             <a href="https://github.com/YeahhColix/prismWebsite/releases/download/2.206/PrismGDPS.zip" target="_blank">
               <img src="/vault/download-pc.png" alt="Download for Windows" width="125">
                 </a>
+            <a href="https://github.com/YeahhColix/prismWebsite/releases/download/2.206/PrismGDPS.ipa" target="_blank">
+              <img src="/vault/download-ios.png" alt="Download for iPhone" width="125">
+                </a>
         </center>
     </div>
     </div>
