--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <center>
           <a href="/" target="_self">
-        <img src="//prismgdps.pages.dev/files/prismCenteredHeader.png" class="prismHeader"></a>
+        <img src="//prismgdps.pages.dev/vault/prismCenteredHeader.png" class="prismHeader"></a>
  
         <body>
             <div class="dashboard-container gdbox-brown songs style="flex-direction: row;">
@@ -35,11 +35,11 @@
     </div>
     </div>
                 <footer>
-            <a href="dc" target="_self">
+            <a href="//discord.gg/ayKZX7skpX" target="_self">
                 <img src="/vault/discord.png" alt="Discord Server" width="125">
             <a href="//youtube.com/@PrismPS" target="_self">
                 <img src="/vault/youtube.png" alt="YouTube" width="125">
-            <a href="gdpshub" target="_self">
+            <a href="//gdpshub.com/gdps/2104" target="_self">
                 <img src="/vault/gdpshub.png" alt="GDPS Hub" width="125">
                 </footer>
 </body>
