--- a/standards/index.html
+++ b/standards/index.html
@@ -1,1 +1,23 @@
-What could this be?
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prism // Download</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="//cdn.obeygdbot.xyz/css/dashboard.css?v=14">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/index.css"/>
+  </head>
+<body>
+    <center>
+          <a href="/" target="_self">
+        <img src="/vault/prismCenteredHeader.png" class="prismHeader"></a>
+ 
+        <body>
+Hmm, what could this be?
+        </center>
+    </div>
+    </div>
+</body>
+    </html>
