--- a/standards/index.html
+++ b/standards/index.html
@@ -13,9 +13,9 @@
     <center>
           <a href="/" target="_self">
         <img src="/vault/prismCenteredHeader.png" class="prismHeader"></a>
- 
+             <div class="dashboard-container gdbox-brown songs style="flex-direction: row;">
         <body>
-Hmm, what could this be?
+          
         </center>
     </div>
     </div>
