--- a/download/index.html
+++ b/download/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prism // Download</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="//cdn.obeygdbot.xyz/css/dashboard.css?v=14">
+    <link rel="stylesheet" href="/index2.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/index.css"/>
   </head>
