--- a/standards/index.html
+++ b/standards/index.html
@@ -13,9 +13,11 @@
     <center>
           <a href="/" target="_self">
         <img src="/vault/prismCenteredHeader.png" class="prismHeader"></a>
-             <div class="dashboard-container gdbox-brown songs style="flex-direction: row;">
+             <div class="dashboard-container gdbox-brown songs style="display: flex; justify-content: space-between;">
         <body>
-          
+            <div class="starrate">
+                testing test test hello??????
+            </div>
         </center>
     </div>
     </div>
