--- a/standards/index.html
+++ b/standards/index.html
@@ -18,6 +18,9 @@
             <div class="starrate">
                 testing test test hello??????
             </div>
+            <div class="featuredrate">
+                test2 featuredrate div
+            </div>
         </center>
     </div>
     </div>
