--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <a href="/browser" target="_self">
                <img src="/vault/magnify.png" width="125">
                 </a>
+            <a href="/standards" target="_self">
+               <img src="/vault/star.png" width="125">
+                </a>
         </center>
     </div>
     </div>
