--- a/standards/index.html
+++ b/standards/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prism // Download</title>
+    <title>Prism // Rate Standards</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/index2.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
@@ -16,10 +16,16 @@
              <div class="dashboard-container gdbox-brown songs style="display: flex; justify-content: space-between;">
         <body>
             <div class="starrate">
-                testing test test hello??????
+                <img src="/vault/rate.png">
+                hhhhhhhhhhhhhhh
             </div>
             <div class="featuredrate">
+                <img src="/vault/feature.png">
                 test2 featuredrate div
+            </div>
+            <div class="epicrate">
+                <img src="/vault/epic.png">
+                epico
             </div>
         </center>
     </div>
