--- a/standards/index.html
+++ b/standards/index.html
@@ -17,15 +17,22 @@
         <body>
             <div class="starrate">
                 <img src="/vault/rate.png">
-                hhhhhhhhhhhhhhh
+                 <h3>Star Rating</h3>
+                Level must have reasonable gameplay.<br>
+                Level must be more than 15 seconds.
             </div>
             <div class="featuredrate">
                 <img src="/vault/feature.png">
-                test2 featuredrate div
+                 <h3>Featured</h3>
+                Level must have good decoration.<br>
+                Level must have pretty good gameplay.<br>
+                Level must be more than 30 seconds.
             </div>
             <div class="epicrate">
                 <img src="/vault/epic.png">
-                epico
+                 <h3>Epic</h3>
+                Level must have amazing deco.<br>
+                Level must be more than 40 seconds.
             </div>
         </center>
     </div>
