--- a/standards/index.html
+++ b/standards/index.html
@@ -18,20 +18,20 @@
             <div class="starrate">
                 <img src="/vault/rate.png">
                  <h3>Star Rating</h3>
-                Level must have reasonable gameplay.<br>
+                Level must have reasonable gameplay.<br><br>
                 Level must be more than 15 seconds.
             </div>
             <div class="featuredrate">
                 <img src="/vault/feature.png">
                  <h3>Featured</h3>
-                Level must have good decoration.<br>
-                Level must have pretty good gameplay.<br>
+                Level must have good decoration.<br><br>
+                Level must have pretty good gameplay.<br><br>
                 Level must be more than 30 seconds.
             </div>
             <div class="epicrate">
                 <img src="/vault/epic.png">
                  <h3>Epic</h3>
-                Level must have amazing deco.<br>
+                Level must have amazing deco.<br><br>
                 Level must be more than 40 seconds.
             </div>
         </center>
